--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ p {
 
 .navigation {
 	background: url(img/top.png) repeat;
+	background-size: cover;
 	width: 100%;
 	height: 124px;
 	margin: auto;
