--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ html, body {
 }
 
 h1 {
-	font-size: 52px;
+	font-size: 35px;
 	color: white;
 }
 
 h2 {
-	font-size: 21px;
+	font-size: 15px;
 	font-weight: 200;
 	line-height: 35px;
 }
@@ -22,7 +22,7 @@ h3 {
 } 
 
 p {
-	font-size: 20px;
+	font-size: 9px;
 	line-height: 30px;
 }
 
@@ -31,21 +31,20 @@ p {
 .photopart {
 	background: url(img/bg.jpg) no-repeat center center ;
 	width: 100%;
-	height: 1318px;
+	height: 100%;
 	background-size: cover;
 	margin: 0;
 }
 
 .navigation {
 	background: url(img/top.png) repeat;
-	background-size: cover;
 	width: 100%;
-	height: 124px;
+	height: 100px;
 	margin: auto;
 }
 
 .navigation_box {
-	width: 1300px;
+	width: 1100px;
 	height: 126px;
 	margin: auto;
 }
@@ -67,7 +66,7 @@ p {
   	list-style-type: none;
   	float: right;
   	display: inline;
-  	margin-top: 65px;
+  	margin-top: 55px;
   	margin-right: 5%;
 }
 
@@ -75,7 +74,7 @@ p {
 	list-style-type: none;
   	float: right;
   	display: inline;
-  	margin-top: 65px;
+  	margin-top: 55px;
   	margin-left: auto;
 
 }
@@ -104,28 +103,27 @@ p {
 #navigation_list a {
 	text-decoration: none;
 	color: white;
-	font-size: 18px;
+	font-size: 16px;
 	font-family: FS ALBERT PRO;
 	font-weight: 70%;
 }
 
 .text_part {
-	width: 950px;
+	width: 910px;
 	height: auto;
 	margin: auto;
 	margin-top: -36px;
 }
 
 .text_part h1 {
-	margin-left: 250px;
-	padding-top: 60px;
+	margin-left: 300px;
+	padding-top: 30px;
 	
 
 }
 
 .footer {
 	background: url(img/bottom.png) repeat;
-	background-size: cover;
 	width: 100%;
 	height: 82px;
 	text-align: center;
@@ -136,12 +134,12 @@ p {
 .footer p {
 	padding-top: 25px;
 	color: white;
-	font-size: 11px;
+	font-size: 10px;
 }
 
 .left_container {
 	width: 430px;
-	height: 800px;
+	height: 700px;
 	float: left;
 	border: 2pxxx solid greenxx;
 	margin: auto;
@@ -149,23 +147,23 @@ p {
 
 .right_container {
 	width: 430px;
-	height: 800px;
+	height: 700px;
 	float: right;
 	border: 2pxxx solid bluexx;
 }
 
 .left_container h2 {
-	padding-top: 35px;
+	padding-top: 15px;
 	color: white;
 }
 
 .left_container li {
-	line-height: 25px;
+	line-height: 20px;
 	color:white;
 }
 
 .left_container ul {
-	padding-bottom: 10px;
+	padding-bottom: 5px;
 	list-style: inside circle;
 }
 
@@ -175,8 +173,18 @@ p {
 }	
 
 .right_container h2 {
-	padding-top: 35px;
+	padding-top: 15px;
 	color: white;
-	padding-bottom: 45px;
+	padding-bottom: 10px;
+}
+
+.right_container li {
+	line-height: 20px;
+	color:white;
+}
+
+.right_container ul {
+	list-style: inside circle;
+}
 
 
